yyamamoto+sesetup@salesforce.com/src/objects/CallResult__c.object
<CustomObject>
    <fields>
        <fullName>CallDate__c</fullName>
        <label>コール日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>申し送り事項</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>担当者名</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsEarly__c</fullName>
        <label>早朝対応</label>
        <picklist>
            <picklistValues>
                <fullName>はい</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>いいえ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsReturn__c</fullName>
        <label>戻り予定</label>
        <picklist>
            <picklistValues>
                <fullName>はい</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>いいえ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsVisit__c</fullName>
        <label>訪問可否</label>
        <picklist>
            <picklistValues>
                <fullName>はい</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>いいえ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>製品カテゴリ</label>
        <picklist>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>サーバー</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ネットワーク</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>サプライ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>結果</label>
        <picklist>
            <picklistValues>
                <fullName>不在</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>折り返し</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>訪問日確定</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReturnTime__c</fullName>
        <label>戻り時間</label>
        <picklist>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tel__c</fullName>
        <label>電話番号</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>種別</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitDate__c</fullName>
        <label>訪問日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitTime__c</fullName>
        <label>希望時間</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>見込み客</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>コール履歴</relationshipLabel>
        <relationshipName>E3tg</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>コール履歴</label>
    <nameField>
        <label>コール履歴名</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>RecordType</fullName>
        <active>true</active>
        <description>標準のコール履歴</description>
        <label>標準コール履歴</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>